bugfixes: layout shift in grid bc. of  sesh-card--1 img + heights of cards don't set because used windows.screen.width instead of windows.innerwidth

--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -30,6 +30,11 @@ CARD
   cursor: pointer;
 }
 
+.project-card1-picture {
+  display: flex;
+  justify-content: center;
+}
+
 /* Specific heights and colours for project cards: */
 /* ----------------------------------------------- */
 .card--wfn {
