--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -57,7 +57,7 @@ PROJECT CARDS
 }
 
 #wfn-card--2 .img-container {
-  background-image: url(../../imgs/wfn-mockup2.jpg);
+  background-image: url(../../imgs/wfn-mockup2-min.jpg);
 
   /* Using @supports, we can test whether or not a browser supports a given declaration before using it. */
   /* https://www.js-craft.io/blog/css-fallbacks-for-webp-background-images-with-supports/ */
@@ -68,7 +68,7 @@ PROJECT CARDS
 }
 
 #inf-card--2 .img-container {
-  background-image: url(../../imgs/1nf-mockup.png);
+  background-image: url(../../imgs/1nf-mockup-min.png);
 
   @supports (background-image: url("../../imgs/1nf-mockup.webp")) {
     background-image: url("../../imgs/1nf-mockup.webp");
